--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ minecraft_version = 24w20a
 mappings_version = 24w20a+build.3
 
 fabric_loader_version = 0.15.11
-mod_menu_version = 24w19a-SNAP+24w19b-SNAP.e7969cf
-fabric_api_version = 0.98.1+1.21
+mod_menu_version = 24w19b-snap+24w20a-SNAP.35cf355
+fabric_api_version = 0.98.2+1.21
