--- a/gradle.properties
+++ b/gradle.properties
@@ -9,13 +9,13 @@ author = masa
 mod_file_name = malilib-fabric
 
 # Current mod version
-mod_version = 0.18.999-snap
+mod_version = 0.18.999-sakura
 
 # Minecraft, Fabric Loader and API and mappings versions
-minecraft_version_out = 1.21-pre4
-minecraft_version = 1.21-pre4
-mappings_version = 1.21-pre4+build.2
+minecraft_version_out = 1.21-rc1
+minecraft_version = 1.21-rc1
+mappings_version = 1.21-rc1+build.1
 
 fabric_loader_version = 0.15.11
 mod_menu_version = 11.0.0-beta.1
-fabric_api_version = 0.99.5+1.21
+fabric_api_version = 0.100.0+1.21
