--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ author = masa
 mod_file_name = malilib-fabric
 
 # Current mod version
-mod_version = 0.18.999-sakura
+mod_version = 0.18.999-sakura.1
 
 # Minecraft, Fabric Loader and API and mappings versions
-minecraft_version_out = 1.21-rc1
-minecraft_version = 1.21-rc1
-mappings_version = 1.21-rc1+build.1
+minecraft_version_out = 1.21
+minecraft_version = 1.21
+mappings_version = 1.21+build.1
 
 fabric_loader_version = 0.15.11
 mod_menu_version = 11.0.0-beta.1
